k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web-app
  namespace: default
  labels:
    app: sample-web-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      name: http
  selector:
    app: sample-web-app
