k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-web-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"    
spec:
  tls:
  - hosts:
    - prototype.stelita.app
    secretName: prototype-tls
  rules:
  - host: prototype.stelita.app
    http:
      paths:
      - backend:
          serviceName: sample-web-app
          servicePort: 8080
